NavBar covering content in about page fixed

--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -55,6 +55,7 @@ main {
 
   .Content {
     position: relative;
+    top: 7rem;
   }
 
   .footer {
